# projet_proba_python

./: README.md  setup.cfg  setup.py
src/: __main__.py  application.py  config.py  exercise1.py  exercise2.py  exercises.py  format.py  generate.py  input.py  main_frame.py  menu.py  quadratic_equations.py  rand.py  test_frame.py  utils.py
src/proba/: __main__.py  application.py  config.py  exercise1.py  exercise2.py  format.py  generate.py  integrals.py  menu.py  quadratic_equations.py  rand.py
