[metadata]
name        = proba_python
version     = 0.0.1
description = Probabilités
author      = Maxime BLANCHON
license     = CeCILL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: CeCILL Free Software License Agreement (CeCILL)
    Programming Language :: Python :: 3.6
keywords=jbrowse, watcher, updater, metadata
license_file = LICENSE

[aliases]
build       = bdist_wheel
test        = pytest
addopts     = --color=yes -ra --cache-clear

[bdist_wheel]
universal   = 1

[install]
optimize    = 2

[tool:pytest]
addopts = -ra  --verbose --exitfirst --full-trace
